syntax = "proto2";
package tzrec.protos;

enum Similarity {
  COSINE = 0;
  INNER_PRODUCT = 1;
  EUCLID = 2;
}
